src/test/ui/impl-trait/issues/issue-78722.full_tait.stderr
warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-78722.rs:5:32
   |
LL | #![cfg_attr(full_tait, feature(type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error[E0308]: mismatched types
  --> $DIR/issue-78722.rs:15:20
   |
LL | type F = impl core::future::Future<Output = u8>;
   |          -------------------------------------- the expected opaque type
...
LL |         let f: F = async { 1 };
   |                -   ^^^^^^^^^^^ expected opaque type, found a different opaque type
   |                |
   |                expected due to this
   | 
  ::: $SRC_DIR/core/src/future/mod.rs:LL:COL
   |
LL | pub const fn from_generator<T>(gen: T) -> impl Future<Output = T::Return>
   |                                           ------------------------------- the found opaque type
   |
   = note: expected opaque type `impl Future` (opaque type at <$DIR/issue-78722.rs:8:10>)
              found opaque type `impl Future` (opaque type at <$SRC_DIR/core/src/future/mod.rs:LL:COL>)
   = note: distinct uses of `impl Trait` result in different opaque types

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.
